# Pin-It

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
docs/assets/: pin-it-demo.webm
installer/: PinIt.iss  version.iss.in
resources/: app.rc  resources.qrc
src/: App.css  App.tsx  commands.ts  globalhotkey.cpp  globalhotkey.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  persistence.cpp  persistence.h  pinmanager.cpp  pinmanager.h  shortcutUtils.ts  shortcuts.cpp  shortcuts.h  shortcutsdialog.cpp  shortcutsdialog.h  types.ts  version.h.in  winpin.cpp  winpin.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  commands.rs  events.rs  lib.rs  main.rs  persistence.rs
src-tauri/src/always_on_top/: error.rs  event_hook.rs  hotkey.rs  mod.rs  pin_manager.rs  state.rs  transparency.rs
src/components/: AddWindowPicker.tsx  Keys.tsx  SettingsSection.tsx  ShortcutsPopover.tsx  ShortcutsReference.tsx  Titlebar.tsx  ToastStack.tsx  TrayNotice.tsx  WindowList.tsx
src/utils/: avatar.ts  sound.ts
tests/: test_pinit.cpp
